started creating template for player card

--- a/index.html
+++ b/index.html
@@ -1,17 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/minireset.min.css">
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    
+    <link rel="stylesheet" href="css/minireset.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <main>
+      <section class="player-card">
+        <div class="personal-profile">
+          <div class="platform">Platform</div>
+          <div class="gamertag">Gamertag</div>
+        </div>
+        <header>
+          <h2>Character Name</h2>
+          <p>Wins</p>
+        </header>
+        <div class="stats">
+            <p class="kills">1</p>
+            <p class="deaths">0</p>
+            <p class="kd-ratio">1.0</p>
+        </div>
+      </section>
+    </main>
 
     <script src="js/apex.js"></script>
     <script src="js/main.js"></script>
-</body>
+  </body>
 </html>
